--- a/styles/unmin/default-modern-unmin.css
+++ b/styles/unmin/default-modern-unmin.css
@@ -341,8 +341,8 @@ a:hover {
 .legal-submenu li a:hover {
     background-color: #6a7b87;
 }
-nav ul li:has(> .legal-submenu) {
-    margin-bottom: 15px;
+#legal-info-tab {
+    margin-top: 10px;
 }
 a {
     color: #00b894;
