--- a/styles/unmin/light-classic-unmin.css
+++ b/styles/unmin/light-classic-unmin.css
@@ -312,8 +312,8 @@ a:hover {
 .legal-submenu li a:hover {
     background-color: #4d5e66;
 }
-nav ul li:has(> .legal-submenu) {
-    margin-bottom: 15px;
+#legal-info-tab {
+    margin-top: 10px;
 }
 a {
     color: #1abc9c;
